--- a/Exercise I/index.html
+++ b/Exercise I/index.html
@@ -10,47 +10,55 @@
 </head>
 
 <body>
+  <h1>Lissandra</h1>
 
-  <div class="header">
-    <h1>Lissandra</h1>
-  </div>
-  <div class="links">
-    <ul>
-      <li> <a href="">Home</a></li>
-      <li> <a href="">Skills</a></li>
-      <li> <a href="">Lore</a></li>
-      <li> <a href="">Statistic</a></li>
-    </ul>
-  </div>
-  <div class="container">
-    <div class="item">
-      <h2>Lore</h2>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam accusamus minima quos neque doloribus fugiat illo quisquam numquam nulla impedit, sunt architecto quibusdam dolorum adipisci. Dignissimos nemo soluta repellat maiores!</p>
-      <button>Knowledge</button>
-    </div>
-    <div class="item">
-      <img src="img/lissandra.jpg" alt="Lissandra">
-    </div>
-    <div class="item">
-      <h1>Icy Witch</h1>
-    </div>
-    <div class="item">
-      <h2>skill 1</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, nihil?</p>
-      <h2>skill 2</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, corporis.</p>
-      <h2>skill 3</h2>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, sint.</p>
-    </div>
+  <div class="menu">
+    <a href="/">Lore</a>
+    <a href="/">Skills</a>
+    <a href="/">Statics</a>
+    <a href="/">Value</a>
   </div>
 
+  <div class="conteudo">
+    <div class="introducao">
+      <span class="detalhe"></span>
+      <h1>The Could Black <span>Ice</span></h1>
+      <p>A bruxa gélida que irá enterrar todo o globo terreste em puro Gelo Macico e Negro para auxiliar a volta dos observadores</p>
+      <a class="botao" href="/">Ver Mais</a>
+    </div>
+
+    <img class="photo" src="./img/lissandra.jpg" alt="Lissandra">
+
+    <h2 class="subtitulo">The Ice Witch</h2>
+
+    <div class="vantagens">
+      <div class="vantagens-item">
+        <img src="./img/Lissandra_Passive.png" alt="">
+        <h3>Submissão Glacinata</h3>
+        <p>Quando Lissandra abate um inimigo ele vira um servo congelado.</p>
+      </div>
+      <div class="vantagens-item">
+        <img src="./img/LissandraQ.png" alt="">
+        <h3>Estilhaço de Gelo</h3>
+        <p>Lissandra dispara uma Rajada de gelo negro perfurante.</p>
+      </div>
+      <div class="vantagens-item">
+        <img src="./img/LissandraW.png" alt="">
+        <h3>Círculo Ártico</h3>
+        <p>Lissandra invoca um círculo de gelo negro no terreno imobilizando campeões inimigos proximos.</p>
+      </div>
+      <div class="vantagens-item">
+        <img src="./img/LissandraR.png" alt="">
+        <h3>Tûmulo Congelado</h3>
+        <p>Lissandra cria uma sepultura de gelo negro que imobiliza o campeão, da dano mágico em área e lentidão nos inimigos.</p>
+      </div>
+    </div>
   </div>
-  <!-- 
-  <footer class="footer">
-    <p>All directs reseverds</p>
-  </footer> -->
 
-
+  <div class="rodape">
+    <p>SEPULTE! Todos os Tûmulos Reservados</p>
+  </div>
+</body>
 </body>
 
 </html>
