--- a/Exercise I/index.html
+++ b/Exercise I/index.html
@@ -6,58 +6,76 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Lissandra</title>
 </head>
 
 <body>
-  <h1>Lissandra</h1>
-
-  <div class="menu">
-    <a href="/">Lore</a>
-    <a href="/">Skills</a>
-    <a href="/">Statics</a>
-    <a href="/">Value</a>
+  <h1>LISSANDRA</h1>
+  <div class="icon-icon">
+    <img class="icon-1" src="./img/iconStart.png" alt="icon">
+    <!-- <img class="icon-3" src="./img/freljord_crest_icon.png" alt=""> -->
   </div>
+  <header>
+    <nav>
+      <ul>
+        <div class="menu">
+          <li><a href="/">Description</a></li>
+          <li><a href="/">Lore</a></li>
+          <li><a href="/">Skills</a></li>
+          <li><a href="/">Statistic</a></li>
+      </ul>
+    </nav>
+  </header>
+  <div class="container4">
+    <img class="walpaper" src="./img/lissandraWalpaper.png" alt="">
+    <audio src="./audio/Discurso de Lissandra - Howling Abyss - PT-BR.mp4" controls></audio>
+  </div>
+  <main>
+    <div class="container5">
+      <img class="image-2" src="./img/freljord_emblem.png" alt="emblem">
 
-  <div class="conteudo">
-    <div class="introducao">
-      <span class="detalhe"></span>
-      <h1>The Could Black <span>Ice</span></h1>
-      <p>A bruxa gélida que irá enterrar todo o globo terreste em puro Gelo Macico e Negro para auxiliar a volta dos observadores</p>
-      <a class="botao" href="/">Ver Mais</a>
     </div>
-
-    <img class="photo" src="./img/lissandra.jpg" alt="Lissandra">
-
-    <h2 class="subtitulo">The Ice Witch</h2>
-
-    <div class="vantagens">
-      <div class="vantagens-item">
-        <img src="./img/Lissandra_Passive.png" alt="">
-        <h3>Submissão Glacinata</h3>
-        <p>Quando Lissandra abate um inimigo ele vira um servo congelado.</p>
+    <article class="conteudo">
+      <div class="introducao">
+        <span class="detalhe"></span>
+        <h2>The Could Black <span>Ice</span></h2>
+        <p>A bruxa gélida que irá enterrar todo o globo terreste em puro Gelo Macico e Negro para auxiliar a volta dos observadores</p>
+        <button>learn more</button>
       </div>
-      <div class="vantagens-item">
-        <img src="./img/LissandraQ.png" alt="">
-        <h3>Estilhaço de Gelo</h3>
-        <p>Lissandra dispara uma Rajada de gelo negro perfurante.</p>
+      <img class="photo" src="./img/lissandra.jpg" alt="Lissandra">
+    </article>
+    <article class="conteudo">
+      <div class="vantagens">
+        <!-- <img class="icon-4" src="./img/role_icon_mage.png" alt=""> -->
+        <video width="820" height="240" controls>
+          <source src="./League of Legends - Enter the Freljord.mp4">
+        </video>
+        <div class="vantagens-item">
+          <img src="./img/Lissandra_Passive.png" alt="">
+          <h3>Submissão Glacinata</h3>
+          <p>Quando Lissandra abate um inimigo ele vira um servo congelado.</p>
+        </div>
+        <div class="vantagens-item">
+          <img src="./img/LissandraQ.png" alt="">
+          <h3>Estilhaço de Gelo</h3>
+          <p>Lissandra dispara uma Rajada de gelo negro perfurante.</p>
+        </div>
+        <div class="vantagens-item">
+          <img src="./img/LissandraW.png" alt="">
+          <h3>Círculo Ártico</h3>
+          <p>Lissandra invoca um círculo de gelo negro no terreno imobilizando campeões inimigos proximos.</p>
+        </div>
+        <div class="vantagens-item">
+          <img src="./img/LissandraR.png" alt="">
+          <h3>Tûmulo Congelado</h3>
+          <p>Lissandra cria uma sepultura de gelo negro que imobiliza o campeão, da dano mágico em área e lentidão nos inimigos.</p>
+        </div>
       </div>
-      <div class="vantagens-item">
-        <img src="./img/LissandraW.png" alt="">
-        <h3>Círculo Ártico</h3>
-        <p>Lissandra invoca um círculo de gelo negro no terreno imobilizando campeões inimigos proximos.</p>
-      </div>
-      <div class="vantagens-item">
-        <img src="./img/LissandraR.png" alt="">
-        <h3>Tûmulo Congelado</h3>
-        <p>Lissandra cria uma sepultura de gelo negro que imobiliza o campeão, da dano mágico em área e lentidão nos inimigos.</p>
-      </div>
-    </div>
-  </div>
+    </article>
+  </main>
 
-  <div class="rodape">
-    <p>SEPULTE! Todos os Tûmulos Reservados</p>
-  </div>
+  <footer>Todos os direitos reservados.
+    <img class="indicative" src="./img/riot-seloclassind-12-lol.png" alt="">
+  </footer>
 </body>
 </body>
 
